--- a/configure.properties
+++ b/configure.properties
@@ -1,3 +1,3 @@
 browser=chrome
-url=https://petstore.octoperf.com/actions/Catalog.action
+url=https://petstore.octoperf.com/actions/Catalog.action.
 url2=placeholder
