--- a/configure.properties
+++ b/configure.properties
@@ -1,4 +1,3 @@
 browser=chrome
-url=https://petstore.octoperf.com/actions/Catalog.action#
-url2=placeholder
-home=123
+url=https://computer-database.gatling.io/computers
+url2=https://petstore.octoperf.com/actions/Catalog.action
