Added features on three files of the action folder,and also added something in configure file.

--- a/configure.properties
+++ b/configure.properties
@@ -1,4 +1,4 @@
 browser=chrome
-url=https://petstore.octoperf.com/actions/Catalog.action#
-url2=placeholder
+url=https://petstore.octoperf.com
+url2=https://petstore.octoperf.com/actions/Account.action?newAccountForm=
 home=123
