--- a/configure.properties
+++ b/configure.properties
@@ -1,3 +1,4 @@
 browser=chrome
 url=https://computer-database.gatling.io/computers
-url2=https://petstore.octoperf.com/actions/Catalog.action
+url2=https://computer-database.gatling.io/computers/new
+url3=https://petstore.octoperf.com/actions/Catalog.action
