--- a/configure.properties
+++ b/configure.properties
@@ -1,4 +1,4 @@
 browser=chrome
-url=https://computer-database.gatling.io/computers
-url2=https://computer-database.gatling.io/computers/new
-url3=https://petstore.octoperf.com/actions/Catalog.action
+computerHome=https://computer-database.gatling.io/computers
+ComputerForm=https://computer-database.gatling.io/computers/new
+JpetStoreHome=https://petstore.octoperf.com/actions/Catalog.action
