Updated CheckTheOrderOfColumns class and refactored the classes

--- a/configure.properties
+++ b/configure.properties
@@ -2,8 +2,9 @@ browser=chrome
 url=https://computer-database.gatling.io/computers
 url2=https://petstore.octoperf.com/actions/Catalog.action
 
-<!-- Bleron urls  -->
+
 
 petView = https://petstore.octoperf.com/actions/Catalog.action?viewCategory=&categoryId=DOGS
 speciesSubView = https://petstore.octoperf.com/actions/Catalog.action?viewProduct=&productId=K9-BD-01
-Jtitle=JPetStore Demo
+Jtitle=JPetStore
+Ctitle=Computer
