New Computer should be created

--- a/configure.properties
+++ b/configure.properties
@@ -1,4 +1,4 @@
 browser=chrome
-computerHome=https://computer-database.gatling.io/computers
-ComputerForm=https://computer-database.gatling.io/computers/new
+url=https://computer-database.gatling.io/computers
+url2=https://computer-database.gatling.io/computers/new
 JpetStoreHome=https://petstore.octoperf.com/actions/Catalog.action
