Added changes on the action pages, On the SignUpPage, changed the url on configure file.

--- a/configure.properties
+++ b/configure.properties
@@ -1,3 +1,5 @@
 browser=chrome
 url=https://computer-database.gatling.io/computers
 url2=https://petstore.octoperf.com/actions/Catalog.action
+petstoreurl=https://petstore.octoperf.com/
+petstoreurl1=https://petstore.octoperf.com/actions/Account.action?newAccountForm=
