--- a/configure.properties
+++ b/configure.properties
@@ -1,6 +1,7 @@
 browser=chrome
 url=https://computer-database.gatling.io/computers
 url2=https://petstore.octoperf.com/actions/Catalog.action
+formUrl=https://computer-database.gatling.io/computers/new
 
 <!-- Bleron urls  -->
 
