--- a/configure.properties
+++ b/configure.properties
@@ -6,4 +6,5 @@ url2=https://petstore.octoperf.com/actions/Catalog.action
 
 petView = https://petstore.octoperf.com/actions/Catalog.action?viewCategory=&categoryId=DOGS
 speciesSubView = https://petstore.octoperf.com/actions/Catalog.action?viewProduct=&productId=K9-BD-01
-Jtitle=JPetStore Demo
+Jtitle=JPetStore
+Ctitle=Computer
