The FINAL Push and mergin into the master

--- a/configure.properties
+++ b/configure.properties
@@ -1,5 +1,6 @@
 browser=chrome
 url=https://computer-database.gatling.io/computers
 url2=https://petstore.octoperf.com/actions/Catalog.action
+<--Eron Krasniqi>
 petstoreurl=https://petstore.octoperf.com/
 petstoreurl1=https://petstore.octoperf.com/actions/Account.action?newAccountForm=
