--- a/configure.properties
+++ b/configure.properties
@@ -8,3 +8,4 @@ formUrl=https://computer-database.gatling.io/computers/new
 petView = https://petstore.octoperf.com/actions/Catalog.action?viewCategory=&categoryId=DOGS
 speciesSubView = https://petstore.octoperf.com/actions/Catalog.action?viewProduct=&productId=K9-BD-01
 Jtitle=JPetStore Demo
+Ctitle=Computers
