--- a/configure.properties
+++ b/configure.properties
@@ -9,5 +9,6 @@ petView = https://petstore.octoperf.com/actions/Catalog.action?viewCategory=&cat
 speciesSubView = https://petstore.octoperf.com/actions/Catalog.action?viewProduct=&productId=K9-BD-01
 Jtitle=JPetStore Demo
 
-<!--- Etrit urls>
-allPetView=https://petstore.octoperf.com/actions/Catalog.action;jsessionid=9CAAE80FDB87C3D3D9EA82D8849E4636
+<!--- Etrit urls-->
+
+url4=https://petstore.octoperf.com/actions/Catalog.action;jsessionid=9CAAE80FDB87C3D3D9EA82D8849E4636
