Added on Pages Category, for all who need to use the Pet Category class.

--- a/configure.properties
+++ b/configure.properties
@@ -4,3 +4,6 @@ url2=https://petstore.octoperf.com/actions/Catalog.action
 <--Eron Krasniqi>
 petstoreurl=https://petstore.octoperf.com/
 petstoreurl1=https://petstore.octoperf.com/actions/Account.action?newAccountForm=
+
+Ctitle=Computers
+Jtitle=JPetStore
