Created new test case.

--- a/configure.properties
+++ b/configure.properties
@@ -1,4 +1,4 @@
-browser=chrome
+browser=fireFox
 url=https://computer-database.gatling.io/computers
 url2=https://petstore.octoperf.com/actions/Catalog.action
 Jtitle=JPetStore Demo
